--- a/questioncard/templates/questioncard/questioncard_form.html
+++ b/questioncard/templates/questioncard/questioncard_form.html
@@ -11,7 +11,7 @@
         <div class="row">
             <div class="col-12">
                 <div class="float-right">
-                    <a class="btn btn-outline-dark" href="{% url 'question_card_list' request.resolver_match.kwargs.deck_pk %}">戻る</a>
+                    <a class="btn btn-outline-dark" href="{% url 'question_card_list' deck_pk %}">戻る</a>
                     <a class="btn btn-outline-dark save" href="#">保存</a>
                 </div>
             </div>
