--- a/questioncard/templates/questioncard/questioncard_filter.html
+++ b/questioncard/templates/questioncard/questioncard_filter.html
@@ -27,8 +27,8 @@
             <div class="col-12">
                 <a class="btn btn-secondary filtered" style="visibility:hidden" href="/?page=1">検索を解除</a>
                 <div class="float-right mt-1">
+                    <a class="btn btn-outline-dark" href="{% url 'deck_list' %}">戻る</a>
                     <a class="btn btn-outline-dark" href="{% url 'question_card_create' request.resolver_match.kwargs.deck_pk %}">新規</a>
-                    <a class="btn btn-outline-dark" data-toggle="modal" data-target="#myModal" href="#">検索</a>
                 </div>
             </div>
         </div>
