--- a/deck/templates/deck/deck_filter.html
+++ b/deck/templates/deck/deck_filter.html
@@ -27,6 +27,7 @@
             <div class="col-12">
                 <a class="btn btn-secondary filtered" style="visibility:hidden" href="/?page=1">検索を解除</a>
                 <div class="float-right mt-1">
+                    <a class="btn btn-outline-dark" href="{% url 'index' %}">戻る</a>
                     <a class="btn btn-outline-dark" href="{% url 'deck_create' %}">新規</a>
                 </div>
             </div>
