--- a/templates/_base.html
+++ b/templates/_base.html
@@ -28,12 +28,9 @@
     <div class="collapse navbar-collapse justify-content-end" id="Navber">
         <ul class="navbar-nav">
             <li class="nav-item">
-                <a class="nav-link" href="{% url 'users:update' %}">ニックネーム変更</a>
-            </li>
-        </ul>
-        <ul class="navbar-nav">
-            <li class="nav-item">
-                <a class="nav-link" href="/logout">ログアウト</a>
+                {% if user.is_authenticated %}
+                    <a class="nav-link" href="/logout">ログアウト</a>
+                {% endif %}
             </li>
         </ul>
     </div>
