--- a/questioncard/templates/questioncard/questioncard_filter.html
+++ b/questioncard/templates/questioncard/questioncard_filter.html
@@ -44,28 +44,55 @@
                         <li class="list-group-item">
                             {# 必要な項目を追加してください #}
                             <div class="row">
-                                <div class="col-5 col-sm-3">
-                                    <p>問題文</p>
+                                <div class="col-11">
+                                    <div class="row">
+                                        <div class="col-5 col-sm-3">
+                                            <p>問題文</p>
+                                        </div>
+                                        <div class="col-7 col-sm-9">
+                                            <p>{{ questioncard.question_text|default_if_none:"未入力" }}</p>
+                                        </div>
+                                    </div>
+                                    <div class="row">
+                                        <div class="col-5 col-sm-3">
+                                            <p>正解</p>
+                                        </div>
+                                        <div class="col-7 col-sm-9">
+                                            <p>{{ questioncard.correct_answer|default_if_none:"未入力" }}</p>
+                                        </div>
+                                    </div>
+                                    <div class="row">
+                                        <div class="col-12">
+                                            <div class="float-right">
+                                                <a class="btn btn-outline-dark " href="{% url 'question_card_update' questioncard.pk %}">編集</a>
+                                            </div>
+                                        </div>
+                                    </div>
                                 </div>
-                                <div class="col-7 col-sm-9">
-                                    <p>{{ questioncard.question_text|default_if_none:"未入力" }}</p>
-                                </div>
-                            </div>
-                            <div class="row">
-                                <div class="col-5 col-sm-3">
-                                    <p>正解</p>
-                                </div>
-                                <div class="col-7 col-sm-9">
-                                    <p>{{ questioncard.correct_answer|default_if_none:"未入力" }}</p>
-                                </div>
-                            </div>
-                            <div class="row">
-                                <div class="col-12">
-                                    <div class="float-right">
-                                        <a class="btn btn-outline-dark " href="{% url 'question_card_update' questioncard.pk %}">編集</a>
+                                <div class="col-1">
+                                    <div class="row">
+                                        <div class="float-right">
+                                            <a class="btn btn-outline-dark " href="#">↟</a>
+                                        </div>
+                                    </div>
+                                    <div class="row">
+                                        <div class="float-right">
+                                            <a class="btn btn-outline-dark " href="#">↑</a>
+                                        </div>
+                                    </div>
+                                    <div class="row">
+                                        <div class="float-right">
+                                            <a class="btn btn-outline-dark " href="#">↓</a>
+                                        </div>
+                                    </div>
+                                    <div class="row">
+                                        <div class="float-right">
+                                            <a class="btn btn-outline-dark " href="#">↡</a>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
+                            
                             {% if False %}
                             <div class="row">
                                 <div class="col-12">
