--- a/questioncard/templates/questioncard/questioncard_filter.html
+++ b/questioncard/templates/questioncard/questioncard_filter.html
@@ -1,7 +1,7 @@
 {% extends "_base.html" %}
 {% block content %}
     {% load crispy_forms_tags %}
-    <div id="counter" class="container">
+    <div id="app" class="container">
         <div id="myModal" class="modal fade" tabindex="-1" role="dialog">
             <div class="modal-dialog" role="document">
                 <div class="modal-content">
@@ -40,75 +40,16 @@
         <div class="row">
             <div class="col-12">
                 <ul class="list-group">
-                    {% for questionCard in questionCard_list %}
-                        <li class="list-group-item">
-                            {# 必要な項目を追加してください #}
-                            <div class="row">
-                                <div class="col-11">
-                                    <div class="row">
-                                        <div class="col-5 col-sm-3">
-                                            <p>問題文</p>
-                                        </div>
-                                        <div class="col-7 col-sm-9">
-                                            <p>{{ questionCard.question_text|default_if_none:"未入力" }}</p>
-                                        </div>
-                                    </div>
-                                    <div class="row">
-                                        <div class="col-5 col-sm-3">
-                                            <p>正解</p>
-                                        </div>
-                                        <div class="col-7 col-sm-9">
-                                            <p>{{ questionCard.correct_answer|default_if_none:"未入力" }}</p>
-                                        </div>
-                                    </div>
-                                    <div class="row">
-                                        <div class="col-12">
-                                            <div class="float-right">
-                                                <a class="btn btn-outline-dark " href="{% url 'question_card_update' questionCard.pk %}">編集</a>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="col-1">
-                                    <div class="row">
-                                        <div class="float-right">
-                                            <a class="btn btn-outline-dark " href="#">↟</a>
-                                        </div>
-                                    </div>
-                                    <div class="row">
-                                        <div class="float-right">
-                                            <a class="btn btn-outline-dark " href="#">↑</a>
-                                        </div>
-                                    </div>
-                                    <div class="row">
-                                        <div class="float-right">
-                                            <a class="btn btn-outline-dark " href="#">↓</a>
-                                        </div>
-                                    </div>
-                                    <div class="row">
-                                        <div class="float-right">
-                                            <a class="btn btn-outline-dark " href="#">↡</a>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                            
-                            {% if False %}
-                            <div class="row">
-                                <div class="col-12">
-                                    <div class="float-right">
-                                        <a class="btn btn-outline-dark " href="{% url 'deck_update' deck.pk %}">編集</a>
-                                        <a class="btn btn-outline-dark " href="{% url 'delete' deck.pk %}">削除</a>
-                                    </div>
-                                </div>
-                            </div>
-                            {% endif %}
-                        </li>
-                    {% empty %}
-                        <li class="list-group-item">
-                            対象のデータがありません
-                        </li>
-                    {% endfor %}
+                    <question-card-component v-for="(questionCard, index) in questionCardList"
+                    :question-card-pk="questionCard.questionCardPk"
+                    :question-text="questionCard.questionText"
+                    :correct-answer="questionCard.correctAnswer"
+                    :question-card-update-url="questionCard.questionCardUpdateUrl"
+                    :number="index"
+                    :is-first="index == 0"
+                    :is-last="index == questionCardList.length - 1"
+                    @up="up"
+                    @down="down"></my-template>
                 </ul>
             </div>
         </div>
@@ -117,46 +58,21 @@
                 {% include "_pagination.html" %}
             </div>
         </div>
-        <div class="row">
-            <template>
-                <div>
-                    <div v-for="(item, index) in items" :key="item.id" @click="swap(index)">
-                        {{ item.name }}
-                    </div>
-                </div>
-              </template>
-        </div>
-        <ul class="list-group">
-            {% for questionCard in questionCard_list %}
-                <my-template name="{{ questionCard.question_text|default_if_none:'未入力' }}"></my-template>
-            {% endfor %}
-        </ul>
-    </div>
-    <!--<div id="app" class="container">
-        <div ref="aaa">
-            {% for questionCard in questionCard_list %}
-                <my-template question_text="{{ questionCard.question_text|default_if_none:'未入力' }}"
-                            correct_answer="{{ questionCard.correct_answer|default_if_none:'未入力' }}"
-                            question_card_update_url="{% url 'question_card_update' questionCard.pk %}"></my-template>
-            {% endfor %}
-        </div>
-        <button @click="swap()">change!!</button>
-    </div>-->
-    <div id="app" class="container">
-        <div ref="aaa">
-            <my-template v-for="(questionCard, index) in questionardList"
-                :question-text="questionCard.questionText"
-                :correct-answer="questionCard.correctAnswer"
-                :question-card-update-url="questionCard.questionCardUpdateUrl"
-                :number="index"
-                @up="up"
-                @down="down"></my-template>
-        </div>
-        <button @click="swap()">change!!</button>
     </div>
     <script>
-        const ComponentA = {
-            props:["questionText", "correctAnswer", "questionCardUpdateUrl", "number"],
+        const questionCardListFromServer = [
+            {% for questioncard in questioncard_list %}
+                {
+                    questionCardPk: "{{questioncard.pk}}",
+                    questionText: "{{ questioncard.question_text|default_if_none:'未入力' }}",
+                    correctAnswer: "{{ questioncard.correct_answer|default_if_none:'未入力' }}",
+                    questionCardUpdateUrl: "{% url 'question_card_update' questioncard.pk %}",
+                },
+            {% endfor %}
+        ];
+
+        const QuestionCardComponent = {
+            props:["questionCardPk", "questionText", "correctAnswer", "questionCardUpdateUrl", "number", "isFirst", "isLast"],
             template: `
                 <li class="list-group-item question_card">
                     {# 必要な項目を追加してください #}
@@ -189,22 +105,12 @@
                         <div class="col-1">
                             <div class="row">
                                 <div class="float-right">
-                                    <a class="btn btn-outline-dark " href="#" @click.prevent.stop>↟</a>
+                                    <a class="btn btn-outline-dark" :class="{'disabled' : isFirst}" href="#" @click.prevent.stop="up">↑</a>
                                 </div>
                             </div>
                             <div class="row">
                                 <div class="float-right">
-                                    <a class="btn btn-outline-dark " href="#" @click.prevent.stop="up">↑</a>
-                                </div>
-                            </div>
-                            <div class="row">
-                                <div class="float-right">
-                                    <a class="btn btn-outline-dark " href="#" @click.prevent.stop="down">↓</a>
-                                </div>
-                            </div>
-                            <div class="row">
-                                <div class="float-right">
-                                    <a class="btn btn-outline-dark " href="#" @click.prevent.stop>↡</a>
+                                    <a class="btn btn-outline-dark" :class="{'disabled' : isLast}" href="#" @click.prevent.stop="down">↓</a>
                                 </div>
                             </div>
                         </div>
@@ -223,64 +129,38 @@
                 </li>`
                 ,
             methods:{
+                isFirst() {
+                    return this.number == 0;
+                },
                 up: function(){
-                    console.log('up');
-                    this.$emit("up", this.number);
+                    this.$emit("up", this.number, this.questionCardPk);
                 },
                 down: function(){
-                    console.log('down');
-                    this.$emit("down", this.number);
+                    this.$emit("down", this.number, this.questionCardPk);
                 }
             },
             delimiters: ['[[', ']]']
         }
 
-        const questionardListFromServer = [
-            {% for questioncard in questioncard_list %}
-                {
-                    questionText: "{{ questioncard.question_text|default_if_none:'未入力' }}",
-                    correctAnswer: "{{ questioncard.correct_answer|default_if_none:'未入力' }}",
-                    questionCardUpdateUrl: "{% url 'question_card_update' questioncard.pk %}",
-                    number: {{ forloop.counter0 }},
-                },
-            {% endfor %}
-        ];
-
-        const app2 = Vue.createApp({
+        const app = Vue.createApp({
             data() {
                 return {
                     counter: 0,
                     items : [{ message: 'Foo' }, { message: 'Bar' }],
-                    questionardList : questionardListFromServer,
+                    questionCardList : questionCardListFromServer,
                 }
             },
             methods: {
-                swap() {
-                    [this.questionardList[0], this.questionardList[1]] = [this.questionardList[1], this.questionardList[0]];
-                    /*const aaa = this.$refs.aaa;
-                    quetioncards = aaa.getElementsByClassName("question_card");
-                    aaa.insertBefore(quetioncards[0], null)*/
+                up: function(number, questionCardPk) {
+                    console.log(questionCardPk);
+                    [this.questionCardList[number], this.questionCardList[number - 1]] = [this.questionCardList[number - 1], this.questionCardList[number]];
                 },
-                up: function(number) {
-                    console.log(number);
-                    console.log("up parent");
-                    if(number <= 0) {
-                        return;
-                    }
-
-                    [this.questionardList[number], this.questionardList[number - 1]] = [this.questionardList[number - 1], this.questionardList[number]];
-                },
-                down: function(number) {
-                    console.log(number);
-                    console.log("down parent");
-                    if(number >= this.questionardList.length - 1) {
-                        return;
-                    }
-
-                    [this.questionardList[number], this.questionardList[number + 1]] = [this.questionardList[number + 1], this.questionardList[number]];
+                down: function(number, questionCardPk) {
+                    console.log(questionCardPk);
+                    [this.questionCardList[number], this.questionCardList[number + 1]] = [this.questionCardList[number + 1], this.questionCardList[number]];
                 }
             },
             delimiters: ['[[', ']]']
-        }).component("my-template", ComponentA).mount("#app")
+        }).component("question-card-component", QuestionCardComponent).mount("#app")
     </script>
 {% endblock %}
